# Cosmic-Wanderer

./: Cargo.toml  build.rs
cosmic-wanderer-back/: Cargo.toml
cosmic-wanderer-back/src/: config.rs  entries.rs  main.rs
cosmic-wanderer-daemon/: Cargo.toml
cosmic-wanderer-daemon/src/: config.rs  entries.rs  main.rs
cosmic-wanderer-front/: Cargo.toml
cosmic-wanderer-front/src/: config.rs  history.rs  main.rs
cosmic-wanderer-opener/: Cargo.toml
cosmic-wanderer-opener/src/: main.rs
cosmic-wanderer-ui/: .gitignore  Cargo.toml  build.rs
cosmic-wanderer-ui/src/: config.rs  history.rs  main.rs
src/: config.rs  entries.rs  history.rs  main.rs
ui/: app-window.slint  line-edit.slint
