[package]
name = "cosmic-wanderer"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = { git = "https://github.com/slint-ui/slint", rev = "c18b3cf02fc6a8d45e7ec8d2f6f2e665fd429f2b"}
freedesktop-desktop-entry = "=0.7.11"
shlex = "1.3.0"
freedesktop-icons = "0.3.1"
fuzzy-matcher = "0.3.7"
termion = "4.0.5"
env_logger = "0.10"
log = "0.4.20"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
notify-rust = "4"
config = "0.15.11"

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint", rev = "c18b3cf02fc6a8d45e7ec8d2f6f2e665fd429f2b" }

[profile.release]
lto = "fat"
opt-level = 3  
strip = true 
codegen-units = 1