[package]
name = "cosmic-wanderer"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.12.1"
freedesktop-desktop-entry = "=0.7.11"
shlex = "1.3.0"
freedesktop-icons = "0.3.1"
fuzzy-matcher = "0.3.7"
termion = "4.0.5"
env_logger = "0.10"
log = "0.4.20"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
notify-rust = "4"
notify = "8.1.0"
parking_lot = "0.12"
config = "0.15.11"

[build-dependencies]
slint-build = "1.12.1"

[profile.release]
lto = "fat"
opt-level = 3
strip = true 
codegen-units = 1
debug = 0
debug-assertions = false