[package]
name = "cosmic-wanderer"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = { git = "https://github.com/slint-ui/slint.git", rev = "9e82c348c79c897d09ebd9fade1afe2b690eb024", default-features = false, features = [
    "accessibility",
    "compat-1-2",
    "renderer-software",
    "std",
    "backend-qt",
] }
freedesktop-desktop-entry = "=0.7.11"
shlex = "1.3.0"
freedesktop-icons = "0.4.0"
fuzzy-matcher = "0.3.7"
termion = "4.0.6"
env_logger = "0.11"
log = "0.4.29"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
dirs = "6"
notify-rust = "4"
notify = "8.2.0"
parking_lot = "0.12"
config = "0.15.19"

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint.git", rev = "9e82c348c79c897d09ebd9fade1afe2b690eb024", features = [
] }

[features]
default = ["config_file"]
config_file = []
quill_defaults = []

[profile.release]
lto = "thin"
opt-level = 3
strip = true
debug = 0
debug-assertions = false
