[package]
name = "cosmic-wanderer-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
freedesktop-desktop-entry = "=0.7.11"
freedesktop-icons = "0.4.0"
env_logger = "0.11"
log = "0.4.29"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
dirs = "6"
notify = "8.2.0"
config = "0.15.19"
serde_json = "1.0.149"
image = "0.25.10"
zstd = "0.13"
librsvg = "2.62.1"
cairo-rs = "0.22.0"
qoi = "0.4.1"

[features]
default = ["config_file"]
config_file = []
quill_defaults = []

[profile.release]
lto = "thin"
opt-level = 3
strip = true
debug = 0
debug-assertions = false
